--- a/src/CSimple/Pages/GoalPage.xaml
+++ b/src/CSimple/Pages/GoalPage.xaml
@@ -2,13 +2,61 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CSimple.Pages.GoalPage"
              Title="Goal">
+
     <StackLayout Padding="10">
         <Label Text="Goal" 
                FontSize="Title" 
                HorizontalOptions="Center" 
                VerticalOptions="StartAndExpand"/>
+
         <Label Text="This page allows users to set and review their goals." 
                FontSize="Body"
-               VerticalOptions="CenterAndExpand"/>
+               VerticalOptions="CenterAndExpand"
+               Margin="0,0,0,20"/>
+
+        <!-- Table Header -->
+        <Grid ColumnDefinitions="*, 2*, 2*" RowDefinitions="Auto">
+            <Label Text="Datetime" 
+                   FontSize="Subtitle" 
+                   FontAttributes="Bold" 
+                   HorizontalTextAlignment="Center"/>
+            <Label Text="Goal" 
+                   Grid.Column="1"
+                   FontSize="Subtitle" 
+                   FontAttributes="Bold" 
+                   HorizontalTextAlignment="Center"/>
+            <Label Text="Plan" 
+                   Grid.Column="2"
+                   FontSize="Subtitle" 
+                   FontAttributes="Bold" 
+                   HorizontalTextAlignment="Center"/>
+        </Grid>
+
+        <!-- Table Rows (Sample Data) -->
+        <CollectionView ItemsSource="{Binding Goals}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid ColumnDefinitions="*, 2*, 2*" RowDefinitions="Auto" Padding="0,10">
+                        <!-- Datetime -->
+                        <Label Text="{Binding Datetime}" 
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"/>
+
+                        <!-- Goal -->
+                        <Label Text="{Binding Goal}" 
+                               Grid.Column="1" 
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"/>
+
+                        <!-- Plan -->
+                        <Label Text="{Binding Plan}" 
+                               Grid.Column="2" 
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"/>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
     </StackLayout>
 </ContentPage>
