--- a/src/CSimple/Views/CurrentWidget.xaml
+++ b/src/CSimple/Views/CurrentWidget.xaml
@@ -8,32 +8,10 @@
         HeightRequest="200"
         HorizontalOptions="Center"
         Aspect="AspectFit"
-        Source="weather_partly_cloudy_day.png">
+        Source="simple_icon.png">
         <!--<Image.Shadow>
             <Shadow Brush="#2B0B98" Offset="20,20" Radius="20" Opacity="0.8"/>
         </Image.Shadow>-->
     </Image>
-
-    <Label
-        Text="88℉"
-        HorizontalOptions="Center"
-        class="Title1" />
-
-    <Border BackgroundColor="{StaticResource Primary}"
-            Stroke="Transparent"
-            StrokeThickness="1"
-            HorizontalOptions="Center"
-            Padding="15,4"
-            >
-        <Border.StrokeShape>
-            <RoundRectangle CornerRadius="60"/>
-        </Border.StrokeShape>
-        <Label
-                    Text="Clear"
-                    TextColor="{StaticResource White}"
-                    HorizontalOptions="Center"
-                    FontSize="18"/>
-    </Border>
-    
 
 </VerticalStackLayout>
