--- a/src/CSimple/Pages/HomePage.xaml
+++ b/src/CSimple/Pages/HomePage.xaml
@@ -10,7 +10,7 @@
     x:Class="CSimple.Pages.HomePage"
     x:Name="this">
 
-    <ContentPage.MenuBarItems>
+    <!-- <ContentPage.MenuBarItems>
         <MenuBarItem Text="File">
             <MenuFlyoutItem Text="Quit" Command="{Binding QuitCommand}"/>
         </MenuBarItem>
@@ -26,7 +26,7 @@
             <MenuFlyoutItem Text="Refresh" Command="{Binding RefreshCommand}"/>
             <MenuFlyoutItem Text="Toggle Light/Dark Mode" Command="{Binding ToggleModeCommand}"/>
         </MenuBarItem>
-    </ContentPage.MenuBarItems>
+    </ContentPage.MenuBarItems> -->
 
     <Grid
 
@@ -38,7 +38,7 @@
                 Padding="{OnIdiom Phone='0,50',Default='0,50'}"
                 Spacing="{OnIdiom Phone=25,Default=50}">
                 
-                <Label Text="Welcome to CSimple!" 
+                <Label Text="Welcome to Simple!" 
                     FontSize="Title" 
                     HorizontalOptions="Center" 
                     VerticalOptions="StartAndExpand"/>
@@ -64,9 +64,6 @@
                     IsVisible="{OnIdiom Phone=True, Default=False}"/>
     
                 <BoxView HeightRequest="1" />
-
-                <v:Next24HrWidget />
-                <v:Next7DWidget />
 
             </VerticalStackLayout>
         </ScrollView>
