--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -30,6 +30,7 @@
                     <!-- <Grid.GestureRecognizers>
                         <TapGestureRecognizer TappedCommand="{Binding RowTappedCommand}" CommandParameter="{Binding .}" />
                     </Grid.GestureRecognizers> -->
+                    <ProgressBar x:Name="ProgressBar" Grid.ColumnSpan="3" HeightRequest="4" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="LightGray" ProgressColor="Green" Progress="0"/>
                     <Label Grid.Column="0" Text="{Binding ActionName}" VerticalOptions="Center"/>
                     <Label Grid.Column="1" Text="{Binding ActionArrayFormatted}" VerticalOptions="Center"/>
                     <Button Grid.Column="2" Text="Simulate" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.SimulateActionGroupCommand}" CommandParameter="{Binding .}" VerticalOptions="Center"/>
