--- a/src/CSimple/Pages/LoginPage.xaml
+++ b/src/CSimple/Pages/LoginPage.xaml
@@ -1,21 +1,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CSimple.Pages.LoginPage"
-             Title="Login">
-    <StackLayout Padding="10">
-        <Label Text="Login" 
-               FontSize="Title" 
-               HorizontalOptions="Center" 
-               VerticalOptions="StartAndExpand"/>
-       <Entry Placeholder="Username" 
-              Text="{Binding Username}"
-              Keyboard="Default"/>
-       <Entry Placeholder="Password" 
-              Text="{Binding Password}"
-              IsPassword="True"/>
-        <Button Text="Login" 
-                Command="{Binding LoginCommand}" 
-                HorizontalOptions="Center" 
-                VerticalOptions="CenterAndExpand"/>
-    </StackLayout>
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:vm="clr-namespace:CSimple.ViewModels"
+       x:Class="CSimple.Pages.LoginPage"
+       Title="Login">
+       <ContentPage.BindingContext>
+              <vm:LoginViewModel />
+       </ContentPage.BindingContext>
+              <StackLayout Padding="10">
+                     <Label Text="Login" 
+                            FontSize="Title" 
+                            HorizontalOptions="Center" 
+                            VerticalOptions="StartAndExpand"/>
+                     <Entry Placeholder="Email" 
+                            Text="{Binding Email}"
+                            Keyboard="Default"/>
+                     <Entry Placeholder="Password" 
+                            Text="{Binding Password}"
+                            IsPassword="True"/>
+                     <Button Text="Login" 
+                            Command="{Binding LoginCommand}" 
+                            HorizontalOptions="Center" 
+                            VerticalOptions="CenterAndExpand"/>
+       </StackLayout>
 </ContentPage>
